--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivGreenCard.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivGreenCard.html
@@ -91,11 +91,10 @@ Green Card follow-up visit form
         var LDL_RESULT = GREENCARD_VELOCITY.split(",")[7].split(":")[1];
         var IPT_COMPLETED = GREENCARD_VELOCITY.split(",")[8].split(":")[1];
         var GOOD_ADHERENCE = GREENCARD_VELOCITY.split(",")[9].split(":")[1];
-        var PATIENT_PREGNANT = GREENCARD_VELOCITY.split(",")[10].split(":")[1];
-        var PATIENT_BREASTFEEDING = GREENCARD_VELOCITY.split(",")[11].split(":")[1];
+//        var PATIENT_PREGNANT = GREENCARD_VELOCITY.split(",")[10].split(":")[1];
+//        var PATIENT_BREASTFEEDING = GREENCARD_VELOCITY.split(",")[11].split(":")[1];
 
-        console.log("PATIENT_PREGNANT ==>"+PATIENT_PREGNANT);
-        console.log("PATIENT_BREASTFEEDING ==>"+PATIENT_BREASTFEEDING);
+        console.log("Greencard velocity ==>"+ GREENCARD_VELOCITY);
 
         var pAge = parseInt('<lookup expression="patient.age"/>');
         var pgender = "<lookup expression="patient.gender" />";
@@ -644,18 +643,18 @@ function recordedStabilityAssessmentIndicators() {
     }else{
         jq('#ipt-completion:text').val("NO");
     }
-    //7. pregnant
-    if(PATIENT_PREGNANT == 'true') {
-        jq('#pregnant:text').val("YES");
-    }else{
-        jq('#pregnant:text').val("NO");
-    }
-    //7. breast feeding
-    if(PATIENT_BREASTFEEDING == 'true') {
-        jq('#breast-feeding:text').val("YES");
-    }else{
-        jq('#breast-feeding:text').val("NO");
-    }
+//    //7. pregnant
+//    if(PATIENT_PREGNANT == 'true') {
+//        jq('#pregnant:text').val("YES");
+//    }else{
+//        jq('#pregnant:text').val("NO");
+//    }
+//    //7. breast feeding
+//    if(PATIENT_BREASTFEEDING == 'true') {
+//        jq('#breast-feeding:text').val("YES");
+//    }else{
+//        jq('#breast-feeding:text').val("NO");
+//    }
 }
 function onLmpChange() {
     jq('#pregnancyOption :input').prop('disabled', false);
@@ -3757,19 +3756,19 @@ beforeSubmit.push(function() {
                                             <input type="text" name="ipt-completion" id="ipt-completion" readonly="True" />
                                         </td>
                                     </tr>
-                                    <includeIf velocityTest="$patient.gender == 'F'">
-                                    <tr>
-                                        <td>
-                                            Pregnant :
-                                            <input type="text" name="pregnant" id="pregnant" readonly="True" />
+                                    <!--<includeIf velocityTest="$patient.gender == 'F'">-->
+                                    <!--<tr>-->
+                                        <!--<td>-->
+                                            <!--Pregnant :-->
+                                            <!--<input type="text" name="pregnant" id="pregnant" readonly="True" />-->
 
-                                        </td>
-                                        <td>
-                                            Breast feeding:&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
-                                            <input type="text" name="breast-feeding" id="breast-feeding" readonly="True" />
-                                        </td>
-                                    </tr>
-                                    </includeIf>
+                                        <!--</td>-->
+                                        <!--<td>-->
+                                            <!--Breast feeding:&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;-->
+                                            <!--<input type="text" name="breast-feeding" id="breast-feeding" readonly="True" />-->
+                                        <!--</td>-->
+                                    <!--</tr>-->
+                                    <!--</includeIf>-->
                                         </td>
                                     </tr>
                                 </table>
