Fixed bug on isBreastFeedingCaculation having an error on hivgreencard

--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivGreenCard.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivGreenCard.html
@@ -91,8 +91,8 @@ Green Card follow-up visit form
         var LDL_RESULT = GREENCARD_VELOCITY.split(",")[7].split(":")[1];
         var IPT_COMPLETED = GREENCARD_VELOCITY.split(",")[8].split(":")[1];
         var GOOD_ADHERENCE = GREENCARD_VELOCITY.split(",")[9].split(":")[1];
-//        var PATIENT_PREGNANT = GREENCARD_VELOCITY.split(",")[10].split(":")[1];
-//        var PATIENT_BREASTFEEDING = GREENCARD_VELOCITY.split(",")[11].split(":")[1];
+        var PATIENT_PREGNANT = GREENCARD_VELOCITY.split(",")[10].split(":")[1];
+        var PATIENT_BREASTFEEDING = GREENCARD_VELOCITY.split(",")[11].split(":")[1];
 
         console.log("Greencard velocity ==>"+ GREENCARD_VELOCITY);
 
@@ -162,6 +162,7 @@ Green Card follow-up visit form
             var age = parseInt('<lookup expression="patient.age"/>');
             if (age &lt; 11) {
                 jq('#fp-details').hide();
+                jq('#pregnantBreastFeeding').hide();
                 jq('.reproductive-part').hide();
             }
             //Gravida
@@ -643,18 +644,18 @@ function recordedStabilityAssessmentIndicators() {
     }else{
         jq('#ipt-completion:text').val("NO");
     }
-//    //7. pregnant
-//    if(PATIENT_PREGNANT == 'true') {
-//        jq('#pregnant:text').val("YES");
-//    }else{
-//        jq('#pregnant:text').val("NO");
-//    }
-//    //7. breast feeding
-//    if(PATIENT_BREASTFEEDING == 'true') {
-//        jq('#breast-feeding:text').val("YES");
-//    }else{
-//        jq('#breast-feeding:text').val("NO");
-//    }
+    //7. pregnant
+    if(PATIENT_PREGNANT == 'true') {
+        jq('#pregnant:text').val("YES");
+    }else{
+        jq('#pregnant:text').val("NO");
+    }
+    //8. breast feeding
+    if(PATIENT_BREASTFEEDING == 'true') {
+        jq('#breast-feeding:text').val("YES");
+    }else{
+        jq('#breast-feeding:text').val("NO");
+    }
 }
 function onLmpChange() {
     jq('#pregnancyOption :input').prop('disabled', false);
@@ -2235,6 +2236,7 @@ beforeSubmit.push(function() {
                             }
                             if (age &lt; 11) {
                                 jq('.reproductive-part').hide();
+                                jq('#pregnantBreastFeeding').hide();
                                 jq("#fp-details").hide();
                             }
                             //If using ctx show dispece and adherence
@@ -3756,19 +3758,19 @@ beforeSubmit.push(function() {
                                             <input type="text" name="ipt-completion" id="ipt-completion" readonly="True" />
                                         </td>
                                     </tr>
-                                    <!--<includeIf velocityTest="$patient.gender == 'F'">-->
-                                    <!--<tr>-->
-                                        <!--<td>-->
-                                            <!--Pregnant :-->
-                                            <!--<input type="text" name="pregnant" id="pregnant" readonly="True" />-->
+                                    <includeIf velocityTest="$patient.gender == 'F'">
+                                    <tr id ="pregnantBreastFeeding">
+                                        <td>
+                                            Pregnant :
+                                            <input type="text" name="pregnant" id="pregnant" readonly="True" />
 
-                                        <!--</td>-->
-                                        <!--<td>-->
-                                            <!--Breast feeding:&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;-->
-                                            <!--<input type="text" name="breast-feeding" id="breast-feeding" readonly="True" />-->
-                                        <!--</td>-->
-                                    <!--</tr>-->
-                                    <!--</includeIf>-->
+                                        </td>
+                                        <td>
+                                            Breast feeding:&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
+                                            <input type="text" name="breast-feeding" id="breast-feeding" readonly="True" />
+                                        </td>
+                                    </tr>
+                                    </includeIf>
                                         </td>
                                     </tr>
                                 </table>
