Finalised on stability table formatting

--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivGreenCard.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivGreenCard.html
@@ -3766,15 +3766,10 @@ beforeSubmit.push(function() {
 
                                     <includeIf velocityTest="$patient.gender == 'F'">
                                     <tr id ="pregnantBreastFeeding">
-                                        <td>
-                                            Pregnant :
-                                            <input type="text" name="pregnant" id="pregnant" readonly="True" />
-
-                                        </td>
-                                        <td>
-                                            Breast feeding:&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
-                                            <input type="text" name="breast-feeding" id="breast-feeding" readonly="True" />
-                                        </td>
+                                        <td>Pregnant </td>
+                                        <td><input type="text" name="pregnant" id="pregnant" readonly="True" /> </td>
+                                        <td>Breast feeding </td>
+                                        <td><input type="text" name="breast-feeding" id="breast-feeding" readonly="True" /> </td>
                                     </tr>
                                     </includeIf>
                                 </table>
