--- a/omod/src/main/webapp/resources/htmlforms/mchcs/mchcsEnrollment.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchcs/mchcsEnrollment.html
@@ -37,6 +37,7 @@
         var PATIENT_ON_ART = GREENCARD_VELOCITY.split(",")[3].split(":")[1];
         var REGIMEN_NAME = GREENCARD_VELOCITY.split(",")[5].split(":")[1];
         var encDate = new Date();
+        var ctxPath = typeof openmrsContextPath === 'string' ? openmrsContextPath : OPENMRS_CONTEXT_PATH;
 
         var YES_CONCEPT_ID = 1065;
         var NO_CONCEPT_ID = 1066;
@@ -59,6 +60,9 @@
             jq('#pmtctDrugsReceived input').click(pmtctDrugsForMother);
             onARTatEnrollment();
             jq('#onART input').change(onARTatEnrollment);
+
+            jq('#heiNumberError').hide();
+            jq("#hei-id input[type=text]").blur(checkForExistingPatientIdentifiers);
 
             jq('#specialCare input').change(needSpecialCare);
             //including the mother details
@@ -297,6 +301,18 @@
                 clearHiddenSections(jq('#onART'));
                 clearHiddenSections(jq('#facility-registered'));
             }
+        }
+        function checkForExistingPatientIdentifiers() {
+            var heiNumberEntered = jq('#hei-id input[type=text]').val();
+            jq.getJSON('/' + ctxPath + '/kenyaemr/emrUtils/identifierExists.action', { heiNumber: heiNumberEntered }, function(data) {
+                jq('#heiNumberError').hide();
+                if (data.heiNumberExists === true) {
+
+                    jq('#heiNumberError').text("A patient with similar HEI ID already exists. Please correct before proceeding");
+                    jq('#heiNumberError').show();
+                    jq('#hei-id input[type=text]').focus();
+                }
+            });
         }
 
         //Clear hidden sections
@@ -571,6 +587,7 @@
 						<tr>
 							<td>HEI ID Number</td>
 							<td><span id="hei-id"><patient field="identifier" identifierTypeId="0691f522-dd67-4eeb-92c8-af5083baf338" required="false" /></span></td>
+							<span id="heiNumberError" class="error"></span>
 							<td>SPD No</td>
 							<td id="spd"><obs conceptId="162054AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"  required="false"/></td>
 						</tr>
