changed label for section showing number of patients booked on a date

--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivGreenCard.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivGreenCard.html
@@ -3810,7 +3810,7 @@ beforeSubmit.push(function() {
                     </table>
                     <table id="showNumberBooked" class="simple-table">
                         <tr>
-                        <td> <span class="ke-flagtag">Number Booked on Date Selected</span></td>
+                        <td> <span class="ke-flagtag">Number of patients already booked on the Date selected</span></td>
                         <td><span id="showBookedResult"></span></td></tr>
                     </table>
                     <table>
