Updated enhanced adherence form line breaks in return visits

--- a/omod/src/main/webapp/resources/htmlforms/hiv/enhancedAdherenceScreening.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/enhancedAdherenceScreening.html
@@ -287,7 +287,7 @@
                         <td><obs conceptId="164982" rows="2" cols="100" style="textarea" /></td>
                     </tr>
                     <tr>
-                        <td> 5. Way forward:    <br /><br /> </td>
+                        <td> 5. Way forward:     </td>
                         <td>
                             <obs conceptId="160632AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" rows="2" cols="100" style="textarea" />
                         </td>
@@ -304,52 +304,36 @@
                     <tr><td><strong> Cognitive Barriers </strong></td></tr>
                     <tr>
                         <td> 1. How does the patient feel concerning the result?	</td>
-                    </tr>
-                    <tr>
                         <td><obs conceptId="164983" rows="2" cols="100" style="textarea" /></td>
                     </tr>
                     <tr><td><strong>Behavioural  Barriers </strong> </td></tr>
                     <tr>
                         <td> 1. Let the patient explan how they take their drugs, and at what time and how they store them	</td>
-                    </tr>
-                    <tr>
                         <td><obs conceptId="164984" rows="2" cols="100" style="textarea" /></td>
                     </tr>
                     <tr>
                         <td> 2. How does treatment fit the patient daily routines? What reminder tools are used?	</td>
-                    </tr>
-                    <tr>
                         <td><obs conceptId="164985" rows="2" cols="100" style="textarea" /></td>
                     </tr>
                     <tr>
                         <td> 3. What does the patient do in case of visits and travels?	</td>
-                    </tr>
-                    <tr>
                         <td><obs conceptId="164986" rows="2" cols="100" style="textarea" /></td>
                     </tr>
                     <tr>
                         <td> 4. What does the patient do incase of Side Effects?	</td>
-                    </tr>
-                    <tr>
                         <td><obs conceptId="164987" rows="2" cols="100" style="textarea" /></td>
                     </tr>
                     <tr>
                         <td> 5. What are the most difficult situations for the patient to take drugs?	</td>
-                    </tr>
-                    <tr>
                         <td><obs conceptId="164988" rows="2" cols="100" style="textarea" /></td>
                     </tr>
                     <tr><td><strong> Emotional Barriers </strong></td></tr>
                     <tr>
                         <td>1. How does the patient feel about taking drugs everyday?	</td>
-                    </tr>
-                    <tr>
                         <td><obs conceptId="164989" rows="2" cols="100" style="textarea" /></td>
                     </tr>
                     <tr>
-                        <td> 2. Motivation. What are the patient ambitions in life? What are the 3 most important things they still want to achieve?	</td>
-                    </tr>
-                    <tr>
+                        <td> 2. Motivation. What are the patient ambitions in life?  <br /> What are the 3 most important things they still want to achieve?	</td>
                         <td><obs conceptId="164990" rows="2" cols="100" style="textarea" /></td>
                     </tr>
                     <tr><td><strong>Socio-Economic Barriers  </strong></td></tr>
@@ -360,15 +344,11 @@
                         <td><obs conceptId="164991"  answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio" answerLabels="Yes,No" /><br /><br /></td>
                     </tr>
                     <tr>
-                        <td>2. Discuss how the patient can enlist the support of their family, friends and/or co-workers, a treatment buddy, community or support group?	</td>
-                    </tr>
-                    <tr>
+                        <td>2. Discuss how the patient can enlist the support of their family, <br /> friends and/or co-workers, a treatment buddy, community or support group?	</td>
                         <td><obs conceptId="164992" rows="2" cols="100" style="textarea" /></td>
                     </tr>
                     <tr>
                         <td> 3. Review the patient's and family's sources of income and how well they cover their needs.	</td>
-                    </tr>
-                    <tr>
                         <td><obs conceptId="164993" rows="2" cols="100" style="textarea" /></td>
                     </tr>
                     <tr>
@@ -393,7 +373,7 @@
                         <td><obs conceptId="164997"  answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio" answerLabels="Yes,No" /> <br /><br /></td>
                     </tr>
                     <tr>
-                        <td> 8. Find out if the patient has tried faith healing, or if they have ever stopped taking their medicine because of religious belief	</td>
+                        <td> 8. Find out if the patient has tried faith healing, <br /> or if they have ever stopped taking their medicine because of religious belief	</td>
 
                         <td><obs conceptId="164998"  answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio" answerLabels="Yes,No" /> </td>
                     </tr>
